# Voxlang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISE.md  README.md  SECURITY.md  Spectral.md  build.rs  bundle.sh  install_path.bat  vox.exe.manifest
.github/workflows/: ci.yml
docs/: c_bridge.md  gpu.md  install.md  language.md  stdlib.md
src/: comptime.rs  desugar.rs  diagnostic.rs  discovery.rs  import.rs  index.rs  main.rs  module.rs  parser.rs  refinement.rs  ui.rs  update.rs  vox_rt.rs  watch.rs
src/Examples/: arrays.vx  autoderef.vx  bitwise.vx  borrow.vx  char.vx  comptime.vx  desugar.vx  enum.vx  flextest.vx  float.vx  gen_enum.vx  gen_struct.vx  generics-limited.vx  hash_test.vx  hello.vx  if_else.vx  inference.vx  kernel.vx  logical.vx  modules-imports.vx  parallel.vx  refine_precondition.vx  return_refinement.vx  spec_suite.vx  strings.vx  struct.vx  test_alias.vx  test_use.vx  unary.vx  vec_tests.vx  while.vx
src/Tests/: integration.rs
src/bridge/: generator.rs  mod.rs  parser.rs
src/codegen/: device.rs  expr.rs  generic.rs  gpu.rs  helpers.rs  infer.rs  ir_builder.rs  mod.rs  msl.rs  parallel.rs  runtime.rs  stmt.rs  string_const.rs  type_map.rs
src/frontend/: lexer.rs  span.rs  token.rs
src/lsp/: io.rs  mod.rs
src/semantics/: analyze.rs  builtins.rs  generics.rs  infer.rs  mod.rs  resolver.rs  symbol.rs  types.rs  unify.rs
src/shell/: editor.rs  lsp.rs  macos_gui.rs  mod.rs  runner.rs  terminal.rs  tty.rs  tui.rs  windows_gui.rs
src/std/: cell.rs  env.rs  ffi.rs  fs.rs  io.rs  mem.rs  mod.rs  path.rs  (+6 more)
vxm/: Cargo.toml
(+9 files in other folders)
